# Typhon

./: Cargo.toml  README.md  error.txt
.github/workflows/: rust.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md
AstreaFramework/: Cargo.toml  README.md
AstreaFramework/src/: color.rs  component.rs  geometry.rs  layout.rs  lib.rs  material.rs  motion.rs  performance.rs  render.rs  theme.rs  typography.rs
AstreaFramework/tests/: component_contract.rs  framework_contract.rs
Exodus/: Cargo.toml  README.md
Exodus/src/: components.rs  lib.rs  shell.rs
Exodus/tests/: shell_components.rs  ui_components.rs
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  NATIVE_SESSION.md  SOURCE_LAYOUT.md  XWAYLAND.md  XWAYLAND_VALIDATION.md  layer-shell-smoke.md  presentation-qualification.md  xwayland-modern-profile.md
docs/research/: agent-gauge-resize-damage-perf.md  agent-gauge-resize-followup-perf.md  agent-kernel-minimize-window-state.md  agent-kernel-resize-state-followup.md  (+22 more)
protocols/: astrea-shell-control-v1.xml  astrea-shortcuts-v1.xml  wayland-drm.xml
src/: astrea_shell_control.rs  astrea_shortcuts.rs  cursor_theme.rs  defaults.rs  egl_renderer.rs  launch_env.rs  launch_plan.rs  lib.rs  main.rs  native_output.rs  nested_output.rs  nested_renderer.rs  options.rs  paths.rs  portal.rs  process.rs  prototype.rs  prototype_scene.rs  syncobj.rs  wayland_drm.rs  xwayland.rs
tests/: native_only.rs  start_launcher.rs  xwayland_compatibility.rs  xwayland_dnd.rs  xwayland_gpu_startup.rs  xwayland_native_regression.rs  xwayland_selection.rs  xwayland_windows.rs
(+365 files in other folders)
